apps/sabnzbd/IngressRoute.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd-ing-route
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`sabnzbd.dcunha.io`)
    kind: Rule
    services:
    - name: sabnzbd-svc
      port: 8080
    middlewares:
    - name: default-headers
  tls:
    secretName: dcunha-io-tls
